# thicket

./: .gitignore  CMakeLists.txt  README.md  thicket.sln  tree.sln
FFillDemo/: FFillDemo.vcxproj  FFillDemo.vcxproj.filters  ffilldemo.cpp
Thicket/: ChildFrm.cpp  ClassView.cpp  FileView.cpp  JsonView.cpp  JsonView.h  MainFrm.cpp  MainFrm.h  PropertiesWnd.cpp  PropertiesWnd.h  Resource.h  Thicket.cpp  Thicket.h  Thicket.rc  Thicket.reg  Thicket.vcxproj  Thicket.vcxproj.filters  ThicketDoc.cpp  ThicketDoc.h  ThicketPropertyGridCtrl.cpp  ThicketPropertyGridCtrl.h  ThicketView.cpp  ThicketView.h  TransformView.cpp  TransformView.h  ViewTree.cpp  ViewTree.h  packages.config
Thicket/res/: Thicket.rc2
ThicketApp/: CMakeLists.txt  MatView.cpp  MatView.h  ThicketApp.cpp  ThicketApp.h  ThicketApp.rc  ThicketApp.vcxproj  ThicketApp.vcxproj.filters  ThicketDlg.cpp  ThicketDlg.h  framework.h  packages.config  resource.h
ThicketApp/res/: ThicketApp.rc2
ThicketTest/: ThicketTest.cpp  ThicketTest.vcxproj  ThicketTest.vcxproj.filters
tree/: CMakeLists.txt  ColorTransform.h  ExactRationalAngleTree.h  GridTree.h  HatTree.h  HexGridTree.h  ReptileTree.h  SelfAvoidantPolygonTree.h  SelfLimitingPolygonTree.h  incommensurable_trig.cpp  incommensurable_trig.h  introduction_windows_vs.cpp  main.cpp  packages.config  simple_svg.hpp  tree.cpp  tree.h  tree.vcxproj  tree.vcxproj.filters  treedemo.cpp  treedemo.h  util.h
